# Portfolio-ZhangGuobin

./: .gitignore  CMakeLists.txt  CMakePresets.json  FileTree.cpp  FileTree.h  FileTypeManager.cpp  FolderVisualizerGUI.cpp  IconManager.cpp  IconManager.h  LICENSE  README.md  TreeNode.h  resource.rc
FolderVisualizer/: CMakeLists.txt  FileTree.cpp  FileTree.h  FileTypeManager.cpp  FileTypeManager.h  FolderVisualizerGUI.cpp  IconManager.cpp  IconManager.h  TreeNode.cpp  TreeNode.h  resource.h  resource.rc  简历项目描述.md  项目简述.txt
FolderVisualizer/release/: settings.json  使用说明.md  简历项目描述.md
assets/: settings.json
build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_mingw/.cmake/api/v1/reply/: cache-v2-a6d2be4e2678e4ef142f.json  cmakeFiles-v1-c214b0d0c64278db409b.json  codemodel-v2-e5a76f06ed57df282f32.json  index-2026-03-26T16-58-53-0523.json  target-FolderVisualizer-Release-5a413dea9ab9f52c83c1.json  toolchains-v1-a776e1fd56c73ede21a6.json
docs/: 项目简述.txt
release/: 使用说明.md  简历项目描述.md
resources/windows/: CMakeLists.txt  resource.h  resource.rc
src/: CMakeLists.txt
src/app/: FolderVisualizerGUI.cpp
src/core/: FileTree.cpp  FileTree.h  TreeNode.cpp  TreeNode.h
src/services/: FileTypeManager.h  IconManager.cpp  IconManager.h
